3rd Commit, updated the python file model interpretation notes

--- a/Bike_Sharing_Assignment.ipynb
+++ b/Bike_Sharing_Assignment.ipynb
@@ -6373,9 +6373,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1b029928",
+   "metadata": {},
+   "source": [
+    "### Final model notes:\n",
+    "What does the Model mean ?\n",
+    "\n",
+    "1.  `temp`: too high or tooo low temps will make it hard to cycle and drive lowere rentals\n",
+    "2. weathersit_3 : corresponding to `Light Snow, Light Rain + Thunderstorm + Scattered clouds, Light Rain + Scattered clouds`. Poor weather leads to lower rentals\n",
+    "3. yr  'year (0: 2018, 1:2019)': As 2019 is coded as 1, indicates far higher rentals in 2019. What led to it the Owners may better explain, assuming the service ws more well known and more available in 2019 than 2018.\n",
+    "4. Some other weather related variables too: `season_4, season_2, mnth_9, windspeed`\n",
+    "    Negative windspeed here means ther higer winds men lower rentals.\n",
+    "\n",
+    "So Far weather remains the most important determinant in Bike rentals, all these have been weather related/proxy variables\n",
+    "\n",
+    "5. `Holiday`: the only non weather variable, we saw it was just about significant. We have very few cases in the data with holidays. The negaative coeff. indicates that Holidays mean lower demand.\n",
+    "\n",
+    "P.S. Rentals == Share"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c27dbf71",
+   "id": "6d2bd966",
    "metadata": {},
    "outputs": [],
    "source": []
